--- a/src/advancedsettingswidget.ui
+++ b/src/advancedsettingswidget.ui
@@ -1,84 +1,72 @@
-<!DOCTYPE UI><UI version="3.3" stdsetdef="1">
-<class>AdvancedSettingsWidget</class>
-<widget class="QWidget">
-    <property name="name">
-        <cstring>AdvancedSettingsWidget</cstring>
+<ui version="4.0" stdsetdef="1" >
+  <author></author>
+  <comment></comment>
+  <exportmacro></exportmacro>
+  <class>AdvancedSettingsWidget</class>
+  <widget class="QWidget" name="AdvancedSettingsWidget" >
+    <property name="geometry" >
+      <rect>
+        <x>0</x>
+        <y>0</y>
+        <width>330</width>
+        <height>195</height>
+      </rect>
     </property>
-    <property name="geometry">
-        <rect>
-            <x>0</x>
-            <y>0</y>
-            <width>330</width>
-            <height>195</height>
-        </rect>
+    <property name="windowTitle" >
+      <string>AdvancedSettingsWidget</string>
     </property>
-    <property name="caption">
-        <string>AdvancedSettingsWidget</string>
-    </property>
-    <grid>
-        <property name="name">
-            <cstring>unnamed</cstring>
-        </property>
-        <property name="margin">
-            <number>0</number>
-        </property>
-        <widget class="QLayoutWidget" row="0" column="0">
-            <property name="name">
-                <cstring>layout2</cstring>
-            </property>
-            <grid>
-                <property name="name">
-                    <cstring>unnamed</cstring>
-                </property>
-                <widget class="KLineEdit" row="1" column="0" rowspan="1" colspan="2">
-                    <property name="name">
-                        <cstring>kcfg_searchFor</cstring>
-                    </property>
-                </widget>
-                <spacer row="3" column="1">
-                    <property name="name">
-                        <cstring>spacer1</cstring>
-                    </property>
-                    <property name="orientation">
-                        <enum>Vertical</enum>
-                    </property>
-                    <property name="sizeType">
-                        <enum>Expanding</enum>
-                    </property>
-                    <property name="sizeHint">
-                        <size>
-                            <width>20</width>
-                            <height>80</height>
-                        </size>
-                    </property>
-                </spacer>
-                <widget class="QCheckBox" row="2" column="0" rowspan="1" colspan="2">
-                    <property name="name">
-                        <cstring>kcfg_gMailSimpleInterface</cstring>
-                    </property>
-                    <property name="text">
-                        <string>Open Gmail in simple interface</string>
-                    </property>
-                    <property name="accel">
-                        <string></string>
-                    </property>
-                </widget>
-                <widget class="QLabel" row="0" column="0">
-                    <property name="name">
-                        <cstring>searchLabel</cstring>
-                    </property>
-                    <property name="text">
-                        <string>Search For:</string>
-                    </property>
-                </widget>
-            </grid>
-        </widget>
-    </grid>
-</widget>
-<customwidgets>
-</customwidgets>
-<layoutdefaults spacing="6" margin="11"/>
-<includehints>
-    <includehint>klineedit.h</includehint>
-</includehints>
-</UI>
+    <layout class="QGridLayout" >
+      <property name="margin" >
+        <number>0</number>
+      </property>
+      <item row="0" column="0" >
+        <layout class="QGridLayout" >
+          <item rowspan="1" row="1" column="0" colspan="2" >
+            <widget class="KLineEdit" name="kcfg_searchFor" />
+          </item>
+          <item row="3" column="1" >
+            <spacer name="spacer1" >
+              <property name="sizeHint" >
+                <size>
+                  <width>20</width>
+                  <height>80</height>
+                </size>
+              </property>
+              <property name="sizeType" >
+                <enum>QSizePolicy::Expanding</enum>
+              </property>
+              <property name="orientation" >
+                <enum>Qt::Vertical</enum>
+              </property>
+            </spacer>
+          </item>
+          <item rowspan="1" row="2" column="0" colspan="2" >
+            <widget class="QCheckBox" name="kcfg_gMailSimpleInterface" >
+              <property name="text" >
+                <string>Open Gmail in simple interface</string>
+              </property>
+              <property name="shortcut" >
+                <string/>
+              </property>
+            </widget>
+          </item>
+          <item row="0" column="0" >
+            <widget class="QLabel" name="searchLabel" >
+              <property name="text" >
+                <string>Search For:</string>
+              </property>
+              <property name="wordWrap" >
+                <bool>false</bool>
+              </property>
+            </widget>
+          </item>
+        </layout>
+      </item>
+    </layout>
+  </widget>
+  <layoutdefault spacing="6" margin="11" />
+  <pixmapfunction>qPixmapFromMimeSource</pixmapfunction>
+  <includes>
+    <include location="local" >klineedit.h</include>
+  </includes>
+</ui>
