--- a/src/appearancesettingswidget.ui
+++ b/src/appearancesettingswidget.ui
@@ -1,95 +1,82 @@
-<!DOCTYPE UI><UI version="3.3" stdsetdef="1">
-<class>AppearanceSettingsWidget</class>
-<author>Luis Pereira &lt;luis.artur.pereira@gmail.com&gt;</author>
-<widget class="QWidget">
-    <property name="name">
-        <cstring>AppearanceSettingsWidget</cstring>
+<ui version="4.0" stdsetdef="1" >
+  <author>Luis Pereira &lt;luis.artur.pereira@gmail.com></author>
+  <comment></comment>
+  <exportmacro></exportmacro>
+  <class>AppearanceSettingsWidget</class>
+  <widget class="QWidget" name="AppearanceSettingsWidget" >
+    <property name="geometry" >
+      <rect>
+        <x>0</x>
+        <y>0</y>
+        <width>400</width>
+        <height>280</height>
+      </rect>
     </property>
-    <property name="geometry">
-        <rect>
-            <x>0</x>
-            <y>0</y>
-            <width>400</width>
-            <height>280</height>
-        </rect>
+    <property name="windowTitle" >
+      <string>AppearanceSettingsWidget</string>
     </property>
-    <property name="caption">
-        <string>AppearanceSettingsWidget</string>
-    </property>
-    <grid>
-        <property name="name">
-            <cstring>unnamed</cstring>
-        </property>
-        <property name="margin">
-            <number>0</number>
-        </property>
-        <widget class="QGroupBox" row="0" column="0">
-            <property name="name">
-                <cstring>groupBox1</cstring>
-            </property>
-            <property name="title">
-                <string>Tray Icon</string>
-            </property>
-            <grid>
-                <property name="name">
-                    <cstring>unnamed</cstring>
-                </property>
-                <widget class="QLayoutWidget" row="0" column="0">
-                    <property name="name">
-                        <cstring>layout13</cstring>
-                    </property>
-                    <hbox>
-                        <property name="name">
-                            <cstring>unnamed</cstring>
-                        </property>
-                        <widget class="QLabel">
-                            <property name="name">
-                                <cstring>textLabel1</cstring>
-                            </property>
-                            <property name="text">
-                                <string>&amp;Color used to display  the number
+    <layout class="QGridLayout" >
+      <property name="margin" >
+        <number>0</number>
+      </property>
+      <item row="0" column="0" >
+        <widget class="Q3GroupBox" name="groupBox1" >
+          <property name="title" >
+            <string>Tray Icon</string>
+          </property>
+          <layout class="QGridLayout" >
+            <item row="0" column="0" >
+              <layout class="QHBoxLayout" >
+                <item>
+                  <widget class="QLabel" name="textLabel1" >
+                    <property name="text" >
+                      <string>&amp;Color used to display  the number
 of unread messages:</string>
-                            </property>
-                            <property name="buddy" stdset="0">
-                                <cstring>kcfg_TrayIconUnreadMessagesColor</cstring>
-                            </property>
-                        </widget>
-                        <widget class="KColorButton">
-                            <property name="name">
-                                <cstring>kcfg_TrayIconUnreadMessagesColor</cstring>
-                            </property>
-                            <property name="text">
-                                <string></string>
-                            </property>
-                            <property name="toolTip" stdset="0">
-                                <string>Tray icon number of unread messages color selector</string>
-                            </property>
-                        </widget>
-                    </hbox>
-                </widget>
-            </grid>
+                    </property>
+                    <property name="buddy" stdset="0" >
+                      <cstring>kcfg_TrayIconUnreadMessagesColor</cstring>
+                    </property>
+                    <property name="wordWrap" >
+                      <bool>false</bool>
+                    </property>
+                  </widget>
+                </item>
+                <item>
+                  <widget class="KColorButton" name="kcfg_TrayIconUnreadMessagesColor" >
+                    <property name="text" >
+                      <string/>
+                    </property>
+                    <property name="toolTip" stdset="0" >
+                      <string>Tray icon number of unread messages color selector</string>
+                    </property>
+                  </widget>
+                </item>
+              </layout>
+            </item>
+          </layout>
         </widget>
-        <spacer row="1" column="0">
-            <property name="name">
-                <cstring>Spacer1</cstring>
-            </property>
-            <property name="orientation">
-                <enum>Vertical</enum>
-            </property>
-            <property name="sizeType">
-                <enum>Expanding</enum>
-            </property>
-            <property name="sizeHint">
-                <size>
-                    <width>20</width>
-                    <height>20</height>
-                </size>
-            </property>
+      </item>
+      <item row="1" column="0" >
+        <spacer name="Spacer1" >
+          <property name="sizeHint" >
+            <size>
+              <width>20</width>
+              <height>20</height>
+            </size>
+          </property>
+          <property name="sizeType" >
+            <enum>QSizePolicy::Expanding</enum>
+          </property>
+          <property name="orientation" >
+            <enum>Qt::Vertical</enum>
+          </property>
         </spacer>
-    </grid>
-</widget>
-<layoutdefaults spacing="6" margin="11"/>
-<includehints>
-    <includehint>kcolorbutton.h</includehint>
-</includehints>
-</UI>
+      </item>
+    </layout>
+  </widget>
+  <layoutdefault spacing="6" margin="11" />
+  <pixmapfunction>qPixmapFromMimeSource</pixmapfunction>
+  <includes>
+    <include location="local" >kcolorbutton.h</include>
+  </includes>
+</ui>
