--- a/src/appearancesettingswidget.ui
+++ b/src/appearancesettingswidget.ui
@@ -1,82 +1,83 @@
 <ui version="4.0" stdsetdef="1" >
-  <author>Luis Pereira &lt;luis.artur.pereira@gmail.com></author>
-  <comment></comment>
-  <exportmacro></exportmacro>
-  <class>AppearanceSettingsWidget</class>
-  <widget class="QWidget" name="AppearanceSettingsWidget" >
-    <property name="geometry" >
-      <rect>
-        <x>0</x>
-        <y>0</y>
-        <width>400</width>
-        <height>280</height>
-      </rect>
-    </property>
-    <property name="windowTitle" >
-      <string>AppearanceSettingsWidget</string>
-    </property>
-    <layout class="QGridLayout" >
-      <property name="margin" >
-        <number>0</number>
-      </property>
+ <author>Luis Pereira &lt;luis.artur.pereira@gmail.com></author>
+ <comment></comment>
+ <exportmacro></exportmacro>
+ <class>AppearanceSettingsWidget</class>
+ <widget class="QWidget" name="AppearanceSettingsWidget" >
+  <property name="geometry" >
+   <rect>
+    <x>0</x>
+    <y>0</y>
+    <width>400</width>
+    <height>280</height>
+   </rect>
+  </property>
+  <property name="windowTitle" >
+   <string>AppearanceSettingsWidget</string>
+  </property>
+  <layout class="QGridLayout" >
+   <property name="margin" >
+    <number>0</number>
+   </property>
+   <item row="0" column="0" >
+    <widget class="Q3GroupBox" name="groupBox1" >
+     <property name="title" >
+      <string>Tray Icon</string>
+     </property>
+     <layout class="QGridLayout" >
       <item row="0" column="0" >
-        <widget class="Q3GroupBox" name="groupBox1" >
-          <property name="title" >
-            <string>Tray Icon</string>
+       <layout class="QHBoxLayout" >
+        <item>
+         <widget class="QLabel" name="textLabel1" >
+          <property name="text" >
+           <string>&amp;Color used to display  the number
+            of unread messages:
+           </string>
           </property>
-          <layout class="QGridLayout" >
-            <item row="0" column="0" >
-              <layout class="QHBoxLayout" >
-                <item>
-                  <widget class="QLabel" name="textLabel1" >
-                    <property name="text" >
-                      <string>&amp;Color used to display  the number
-of unread messages:</string>
-                    </property>
-                    <property name="buddy" stdset="0" >
-                      <cstring>kcfg_TrayIconUnreadMessagesColor</cstring>
-                    </property>
-                    <property name="wordWrap" >
-                      <bool>false</bool>
-                    </property>
-                  </widget>
-                </item>
-                <item>
-                  <widget class="KColorButton" name="kcfg_TrayIconUnreadMessagesColor" >
-                    <property name="text" >
-                      <string/>
-                    </property>
-                    <property name="toolTip" stdset="0" >
-                      <string>Tray icon number of unread messages color selector</string>
-                    </property>
-                  </widget>
-                </item>
-              </layout>
-            </item>
-          </layout>
-        </widget>
+          <property name="buddy" stdset="0" >
+           <cstring>kcfg_TrayIconUnreadMessagesColor</cstring>
+          </property>
+          <property name="wordWrap" >
+           <bool>false</bool>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="KColorButton" name="kcfg_TrayIconUnreadMessagesColor" >
+          <property name="text" >
+           <string/>
+          </property>
+          <property name="toolTip" stdset="0" >
+           <string>Tray icon number of unread messages color selector</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
       </item>
-      <item row="1" column="0" >
-        <spacer name="Spacer1" >
-          <property name="sizeHint" >
-            <size>
-              <width>20</width>
-              <height>20</height>
-            </size>
-          </property>
-          <property name="sizeType" >
-            <enum>QSizePolicy::Expanding</enum>
-          </property>
-          <property name="orientation" >
-            <enum>Qt::Vertical</enum>
-          </property>
-        </spacer>
-      </item>
-    </layout>
-  </widget>
-  <layoutdefault spacing="6" margin="11" />
-  <pixmapfunction>qPixmapFromMimeSource</pixmapfunction>
-  <includes>
-    <include location="local" >kcolorbutton.h</include>
-  </includes>
+     </layout>
+    </widget>
+   </item>
+   <item row="1" column="0" >
+    <spacer name="Spacer1" >
+     <property name="sizeHint" >
+      <size>
+       <width>20</width>
+       <height>20</height>
+      </size>
+     </property>
+     <property name="sizeType" >
+      <enum>QSizePolicy::Expanding</enum>
+     </property>
+     <property name="orientation" >
+      <enum>Qt::Vertical</enum>
+     </property>
+    </spacer>
+   </item>
+  </layout>
+ </widget>
+ <layoutdefault spacing="6" margin="11" />
+ <pixmapfunction>qPixmapFromMimeSource</pixmapfunction>
+ <includes>
+  <include location="local" >kcolorbutton.h</include>
+ </includes>
 </ui>
