--- a/src/appearancesettingswidget.ui
+++ b/src/appearancesettingswidget.ui
@@ -1,7 +1,5 @@
-<ui version="4.0" stdsetdef="1" >
+<ui version="4.0" >
  <author>Luis Pereira &lt;luis.artur.pereira@gmail.com></author>
- <comment></comment>
- <exportmacro></exportmacro>
  <class>AppearanceSettingsWidget</class>
  <widget class="QWidget" name="AppearanceSettingsWidget" >
   <property name="geometry" >
@@ -34,21 +32,21 @@
             of unread messages:
            </string>
           </property>
-          <property name="buddy" stdset="0" >
-           <cstring>kcfg_TrayIconUnreadMessagesColor</cstring>
-          </property>
           <property name="wordWrap" >
            <bool>false</bool>
+          </property>
+          <property name="buddy" >
+           <cstring>kcfg_TrayIconUnreadMessagesColor</cstring>
           </property>
          </widget>
         </item>
         <item>
          <widget class="KColorButton" name="kcfg_TrayIconUnreadMessagesColor" >
+          <property name="toolTip" >
+           <string>Tray icon number of unread messages color selector</string>
+          </property>
           <property name="text" >
            <string/>
-          </property>
-          <property name="toolTip" stdset="0" >
-           <string>Tray icon number of unread messages color selector</string>
           </property>
          </widget>
         </item>
@@ -59,17 +57,17 @@
    </item>
    <item row="1" column="0" >
     <spacer name="Spacer1" >
-     <property name="sizeHint" >
-      <size>
-       <width>20</width>
-       <height>20</height>
-      </size>
+     <property name="orientation" >
+      <enum>Qt::Vertical</enum>
      </property>
      <property name="sizeType" >
       <enum>QSizePolicy::Expanding</enum>
      </property>
-     <property name="orientation" >
-      <enum>Qt::Vertical</enum>
+     <property name="sizeHint" stdset="0" >
+      <size>
+       <width>20</width>
+       <height>20</height>
+      </size>
      </property>
     </spacer>
    </item>
@@ -77,7 +75,22 @@
  </widget>
  <layoutdefault spacing="6" margin="11" />
  <pixmapfunction>qPixmapFromMimeSource</pixmapfunction>
+ <customwidgets>
+  <customwidget>
+   <class>KColorButton</class>
+   <extends>QPushButton</extends>
+   <header>kcolorbutton.h</header>
+  </customwidget>
+  <customwidget>
+   <class>Q3GroupBox</class>
+   <extends>QGroupBox</extends>
+   <header>Qt3Support/Q3GroupBox</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
  <includes>
   <include location="local" >kcolorbutton.h</include>
  </includes>
+ <resources/>
+ <connections/>
 </ui>
