--- a/src/netsettingswidget.ui
+++ b/src/netsettingswidget.ui
@@ -1,7 +1,4 @@
-<ui version="4.0" stdsetdef="1" >
- <author></author>
- <comment></comment>
- <exportmacro></exportmacro>
+<ui version="4.0" >
  <class>NetworkSettingsWidget</class>
  <widget class="QWidget" name="NetworkSettingsWidget" >
   <property name="geometry" >
@@ -21,17 +18,17 @@
    </property>
    <item row="3" column="0" >
     <spacer name="spacer1" >
-     <property name="sizeHint" >
-      <size>
-       <width>20</width>
-       <height>40</height>
-      </size>
+     <property name="orientation" >
+      <enum>Qt::Vertical</enum>
      </property>
      <property name="sizeType" >
       <enum>QSizePolicy::Expanding</enum>
      </property>
-     <property name="orientation" >
-      <enum>Qt::Vertical</enum>
+     <property name="sizeHint" stdset="0" >
+      <size>
+       <width>20</width>
+       <height>40</height>
+      </size>
      </property>
     </spacer>
    </item>
@@ -43,19 +40,22 @@
      <property name="value" >
       <number>60</number>
      </property>
-     <property name="minValue" >
-      <number>10</number>
-     </property>
-     <property name="maxValue" >
-      <number>86400</number>
-     </property>
      <property name="suffix" >
       <string> seconds</string>
+     </property>
+     <property name="minValue" stdset="0" >
+      <number>10</number>
+     </property>
+     <property name="maxValue" stdset="0" >
+      <number>86400</number>
      </property>
     </widget>
    </item>
    <item row="2" column="0" >
     <widget class="QCheckBox" name="kcfg_UseHTTPS" >
+     <property name="whatsThis" >
+      <string>&lt;blockquote>Use secure connections when checking for new mail. Note that the login procedure uses https regardless of this setting.&lt;/blockquote></string>
+     </property>
      <property name="text" >
       <string>&amp;Use https connections for checking mail</string>
      </property>
@@ -65,16 +65,22 @@
      <property name="checked" >
       <bool>true</bool>
      </property>
-     <property name="whatsThis" stdset="0" >
-      <string>&lt;blockquote>Use secure connections when checking for new mail. Note that the login procedure uses https regardless of this setting.&lt;/blockquote></string>
-     </property>
     </widget>
    </item>
   </layout>
  </widget>
  <layoutdefault spacing="6" margin="11" />
  <pixmapfunction>qPixmapFromMimeSource</pixmapfunction>
+ <customwidgets>
+  <customwidget>
+   <class>KIntNumInput</class>
+   <extends>QWidget</extends>
+   <header>knuminput.h</header>
+  </customwidget>
+ </customwidgets>
  <includes>
   <include location="local" >knuminput.h</include>
  </includes>
+ <resources/>
+ <connections/>
 </ui>
