--- a/src/loginsettingswidget.ui
+++ b/src/loginsettingswidget.ui
@@ -75,7 +75,11 @@
     </spacer>
    </item>
    <item row="1" column="1" >
-    <widget class="KPasswordEdit" native="1" name="gmailPassword" />
+    <widget class="KLineEdit" name="gmailPassword" >
+     <property name="passwordMode" >
+      <bool>true</bool>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
@@ -87,11 +91,6 @@
    <extends>QLineEdit</extends>
    <header>klineedit.h</header>
   </customwidget>
-  <customwidget>
-   <class>KPasswordEdit</class>
-   <extends>QWidget</extends>
-   <header>kpasswordedit.h</header>
-  </customwidget>
  </customwidgets>
  <tabstops>
   <tabstop>kcfg_GmailUsername</tabstop>
@@ -100,7 +99,6 @@
  </tabstops>
  <includes>
   <include location="local" >klineedit.h</include>
-  <include location="local" >kpassdlg.h</include>
  </includes>
  <resources/>
  <connections/>
