Change UI class names
The uic generated classes are no longer derived from QWidget. File names
renamed accordingly.

Signed-off-by: Luís Pereira <luis.artur.pereira@gmail.com>

--- a/src/advancedsettingsbase.ui
+++ b/src/advancedsettingsbase.ui
@@ -1,6 +1,6 @@
 <ui version="4.0" >
- <class>AdvancedSettingsWidget</class>
- <widget class="QWidget" name="AdvancedSettingsWidget" >
+ <class>AdvancedSettingsBase</class>
+ <widget class="QWidget" name="AdvancedSettingsBase" >
   <property name="geometry" >
    <rect>
     <x>0</x>
