Ran adapt-to-kde4-api.pl
Command line: adapt-to-kde4-api.pl

Signed-off-by: Luís Pereira <luis.artur.pereira@gmail.com>

--- a/src/appletsettingswidget.ui
+++ b/src/appletsettingswidget.ui
@@ -167,7 +167,7 @@
                                 </size>
                             </property>
                         </spacer>
-                        <widget class="KURLRequester">
+                        <widget class="KUrlRequester">
                             <property name="name">
                                 <cstring>kcfg_CustomBrowser</cstring>
                             </property>
